[metadata]
name = hesspix
description = A tiny library to read HESS pixel info from ROOT files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.ecap.work/tgal/hesspix
author = Tamas Gal
author_email = tamas.gal@fau.de
maintainer = Tamas Gal
maintainer_email = tamas.gal@fau.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    neutrino
    astroparticle
    physics
    HEP

[options]
packages = find:
install_requires =
    setuptools_scm
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
all =
    black
    matplotlib
    numpydoc
    ipykernel
    pillow
    pytest
    pytest-cov
    pytest-flake8
    pylint
    pytest-watch
    sphinx
    sphinx-autoapi
    sphinx-gallery>=0.12.1
    sphinx_rtd_theme
    sphinxcontrib-versioning
    wheel
dev =
    black
    matplotlib
    numpydoc
    ipykernel
    pillow
    pytest
    pytest-cov
    pytest-flake8
    pylint
    pytest-watch
    sphinx
    sphinx-autoapi
    sphinx-gallery>=0.1.12
    sphinx_rtd_theme
    sphinxcontrib-versioning
    wheel

[options.package_data]
* = *.py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    src/hesspix/version.py

[tool:isort]
profile = black
multi_line_output = 3
